GNOME Bugzilla – Bug 689843
pango-fontmap.h:92:16: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'char
Last modified: 2012-12-07 15:34:07 UTC
I hit this when building cogl with jhbuild (3.8 modules) (pango from commit 3a59eb51590dcde9cb88b1473b4ca1d6868e8826) make[2]: Entering directory `/home/gnomedev/jhbuild-gnome/source/cogl/cogl-pango' CC libcogl_pango_la-cogl-pango-display-list.lo CC libcogl_pango_la-cogl-pango-fontmap.lo CC libcogl_pango_la-cogl-pango-render.lo CC libcogl_pango_la-cogl-pango-glyph-cache.lo CC libcogl_pango_la-cogl-pango-pipeline-cache.lo In file included from cogl-pango-fontmap.c:42:0: /home/gnomedev/jhbuild-gnome/install/3.8/include/pango-1.0/pango/pango-fontmap.h:92:16: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'char' cogl-pango-fontmap.c: In function 'cogl_pango_font_map_create_context': cogl-pango-fontmap.c:83:3: warning: 'pango_cairo_font_map_create_context' is deprecated (declared at /home/gnomedev/jhbuild-gnome/install/3.8/include/pango-1.0/pango/pangocairo.h:79): Use 'pango_font_map_create_context' instead [-Wdeprecated-declarations] make[2]: *** [libcogl_pango_la-cogl-pango-fontmap.lo] Error 1 make[2]: *** Waiting for unfinished jobs.... In file included from cogl-pango-render.c:32:0: /home/gnomedev/jhbuild-gnome/install/3.8/include/pango-1.0/pango/pango-fontmap.h:92:16: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'char' make[2]: *** [libcogl_pango_la-cogl-pango-render.lo] Error 1 make[2]: Leaving directory `/home/gnomedev/jhbuild-gnome/source/cogl/cogl-pango' make[1]: *** [all-recursive] Error 1 make[1]: Leaving directory `/home/gnomedev/jhbuild-gnome/source/cogl' make: *** [all] Error 2 *** Error during phase build of cogl: ########## Error running make -j 4 *** [1/161]
Created attachment 230970 [details] [review] Drop last use of deprecated G_CONST_RETURN This was blowing up the cogl build since it uses G_DISABLE_DEPRECATED.
Review of attachment 230970 [details] [review]: Looks fine
Attachment 230970 [details] pushed as 13bc45c - Drop last use of deprecated G_CONST_RETURN