Drop last use of deprecated G_CONST_RETURN

This was blowing up the cogl build since it uses G_DISABLE_DEPRECATED.

https://bugzilla.gnome.org/show_bug.cgi?id=689843